some refactoring in CryptonoseGuiPairsController.java